--- a/src/components/similar_movie/SideRight.module.css
+++ b/src/components/similar_movie/SideRight.module.css
@@ -20,3 +20,34 @@
         gap: 0.2em;
     }
 }
+
+@media (min-width: 639px) and ( max-width: 767px) {
+    .sideRight {
+        grid-template-columns: 1fr 1fr ;
+        /*width: 10em;*/
+
+    }
+    .card > a >div {
+        position: relative;
+        top: -8em ;
+        color: white;
+        background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0), rgba(0, 0, 0, .39) 34%, #000 87%) /*copy this from https://phim1080.in/phim-chieu-rap*/
+
+    }
+    .card > a >div {
+        padding-left: 1em;
+
+    }
+    .card {
+        margin-bottom: -7em;
+    }
+
+}
+@media ( max-width: 639px) {
+    /*change from this*/
+    .sideRight {
+        /*grid-template-columns: 1fr 1fr;*/
+        display: none;
+
+    }
+}
