--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,8 @@
-body {
+html, body {
     background-color: #5e5656;
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 a {
